			Dear Emacs, please make this -*-Text-*- mode!
	**************************************************
	*						 *
	*	       2.8 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.8.0


SIGNIFICANT USER-VISIBLE CHANGES


NEW FEATURES

    o	format(), formatC() and prettyNum() gain a new argument
	'drop0trailing' which can be used to suppress trailing "0"s.

    o	Experimental setTimeLimit() function to set limits on the CPU
	and/or elapsed time for each top-level computation.

    o	The user environment and profile files can now be specified via
    	environment variables 'R_ENVIRON_USER' and 'R_PROFILE_USER',
    	respectively.

    o	optim(.., method="SANN", .., trace=TRUE) is now customizable via
	the 'REPORT' control argument, thanks to code proposals by
	Thomas Petzoldt.

    o	The parser and scan() now accept strings with embedded nuls
	such as "a\0b" -- previous versions of R terminated scanning
	at the first (actual or escaped) nul.

    o	tools::texi2dvi() has a new argument 'texinputs' to allow the
	TeX and bibtex input paths to be specified (even on MiKTeX).

    o	setEPS() and setPS() gain '...' to allow other arguments to be
    	passed to ps.options(), including overriding 'width' and 'height'.

    o	dev.copy2pdf() gains an 'out.type' argument to allow it to be
	used with cairo_pdf() or quartz(type = "pdf").

    o	by() gains a 'simplify' argument, passed to tapply().

    o	segments(), arrows() and rect() allow zero-length
	coordinates.  (Wish of PR#11192)

    o	Adobe Symbol has been added to the encodings in
	tools::charset_to_Encoding.

    o	pdf() has new arguments 'useDingbats' (set to FALSE for use
	with broken viewers) and 'colormodel'.	It now only references
	the ZapfDingbats font if it is used.

	The default PDF version is now 1.4, since viewers that do not
	accept that are now rare.

    o	The behaviour of readLines() for incomplete final lines on