@@ -14,6 +14,11 @@ SIGNIFICANT USER-VISIBLE CHANGES
 
 NEW FEATURES
 
+    o	The handling of nuls in character strings has been changed --
+	they are no longer allowed, and attempting to create such a
+	string now gives a truncation warning (unless 
+	options("warnEscapes") is false).
+
     o	format(), formatC() and prettyNum() gain a new argument
 	'drop0trailing' which can be used to suppress trailing "0"s.
 
